--- a/most-used-words/package.json
+++ b/most-used-words/package.json
@@ -1,6 +1,5 @@
 {
   "name": "most-used-words",
-  "title": "Most Used Words",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -52,5 +51,6 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "title": "Most Used Words"
 }
